# 510-SciVis

./: .gitignore  README.md
FinalProject/Proposal/: Proposal.tex
FinalProject/Slides/: Final.tex  FutureWork.tex  Introduction.tex  Methodology.tex  Model.tex  Results.tex
Presentation/: Application.tex  Introduction.tex  Presentation.tex  Research.tex
Project1/: CMakeLists.txt  README.md
Project2/: CMakeLists.txt  Solution.md  proj2.cxx
Project3/: CMakeLists.txt  README.md  proj3.cxx
Project4/: CMakeLists.txt  README.md  proj4.cxx
Project4G/: CMakeLists.txt  README.md  proj4.cxx  proj4G.cxx  proj4G.tex
Project5/: CMakeLists.txt  README.md  proj5.cxx
Project6/: CMakeLists.txt  README.md  proj6.cxx
Project7/: CMakeLists.txt  README.md  proj7.cxx  proj7A.cxx  proj7B.cxx  proj7C.cxx  proj7D.cxx  proj7E.cxx  proj7F.cxx  proj7G.cxx
VolumeRendering/: .gitattributes  CMakeLists.txt  README.md  astro.cxx  astro512.vtk  final_project.cxx
differencer/: CMakeLists.txt
