cmake_minimum_required(VERSION 3.10)

PROJECT(proj7)

find_package(VTK REQUIRED)
include(${VTK_USE_FILE})

add_executable(proj7 proj7.cxx)
add_executable(proj7A proj7A.cxx)
add_executable(proj7B proj7B.cxx)
add_executable(proj7C proj7C.cxx)
add_executable(proj7D proj7D.cxx)
add_executable(proj7E proj7E.cxx)
add_executable(proj7F proj7F.cxx)
add_executable(proj7G proj7G.cxx)
target_link_libraries(proj7 ${VTK_LIBRARIES})
target_link_libraries(proj7A ${VTK_LIBRARIES})
target_link_libraries(proj7B ${VTK_LIBRARIES})
target_link_libraries(proj7C ${VTK_LIBRARIES})
target_link_libraries(proj7D ${VTK_LIBRARIES})
target_link_libraries(proj7E ${VTK_LIBRARIES})
target_link_libraries(proj7F ${VTK_LIBRARIES})
target_link_libraries(proj7G ${VTK_LIBRARIES})
